fixed spacing and added text in evolve

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,16 @@
 body {
 	margin: 0;
 	background-color:#FFF5F4;
-	font-family: 'Quicksand'
+	font-family: 'Quicksand';
+	font-size: 20px;
 }
 
 h2 {
 	font-family: 'Playfair Display';
 	color: white;
 	font-style: normal;
-	font-weight: 400;
-	font-size: 50px;
+	font-weight: 300;
+	font-size: 48px;
 	line-height: 78px;
 	text-align: center;
 }
@@ -32,6 +33,7 @@ nav {
 	font-family: 'Quicksand';
 	background-color: #E4929C;
 	color: white;
+	font-size: 24px;
 	padding: 1.5%;
 }
 
@@ -66,6 +68,8 @@ a {
 	background-color: #E4929C;
 	padding-left: 5%; 
 	padding-right: 10%; 
+	background-image:url('images/Splash_Page.png');
+	background-size: 1800px, 900px;
 	
 }
 
